// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-7 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-7:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-7[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-7:focus {
  outline: unset;
  z-index: 2;
}

.emotion-7::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-7::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-7:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-7::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-10 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02)!important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-11 {
  background-color: var(--bb-palette-background, #000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-11[hidden] {
  display: inherit!important;
  visibility: hidden!important;
}

.emotion-11:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-13 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-14.emotion-14.emotion-14 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
}

<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-owns="test"
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-Autosuggest"
  role="combobox"
>
  <div
    class="emotion-1 emotion-4 emotion-5 emotion-6 bb-AutosuggestInput bb-InputWrapper bb-Box"
  >
    
    <input
      aria-autocomplete="list"
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-invalid="false"
      class="emotion-7 emotion-1 emotion-4 bb-Box bb-Input"
      loop=""
      placeholder="Search for a fruit..."
      role="textbox"
      type="text"
      value=""
    />
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-10 emotion-11 emotion-1 emotion-13 emotion-14 bb-AutosuggestPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
  />
</div>
`;

exports[`overrides styles.base should render correctly 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-7 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-7:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-7[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-7:focus {
  outline: unset;
  z-index: 2;
}

.emotion-7::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-7::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-7:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-7::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-10 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02)!important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-11 {
  background-color: var(--bb-palette-background, #000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-11[hidden] {
  display: inherit!important;
  visibility: hidden!important;
}

.emotion-11:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-13 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-14.emotion-14.emotion-14 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
}

<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-owns="test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Autosuggest"
  role="combobox"
>
  <div
    class="emotion-1 emotion-2 emotion-5 emotion-6 bb-AutosuggestInput bb-InputWrapper bb-Box"
  >
    
    <input
      aria-autocomplete="list"
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-invalid="false"
      class="emotion-7 emotion-1 emotion-2 bb-Box bb-Input"
      loop=""
      placeholder="Search for a fruit..."
      role="textbox"
      type="text"
      value=""
    />
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-10 emotion-11 emotion-1 emotion-13 emotion-14 bb-AutosuggestPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
  />
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-7 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-7:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-7[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-7:focus {
  outline: unset;
  z-index: 2;
}

.emotion-7::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-7::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-7:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-7::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-10 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02)!important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-11 {
  background-color: var(--bb-palette-background, #000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-11[hidden] {
  display: inherit!important;
  visibility: hidden!important;
}

.emotion-11:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-13 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-14.emotion-14.emotion-14 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
}

<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-owns="test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Autosuggest"
  role="combobox"
>
  <div
    class="emotion-1 emotion-2 emotion-5 emotion-6 bb-AutosuggestInput bb-InputWrapper bb-Box"
  >
    
    <input
      aria-autocomplete="list"
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-invalid="false"
      class="emotion-7 emotion-1 emotion-2 bb-Box bb-Input"
      loop=""
      placeholder="Search for a fruit..."
      role="textbox"
      type="text"
      value=""
    />
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-10 emotion-11 emotion-1 emotion-13 emotion-14 bb-AutosuggestPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
  />
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-7 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-7:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-7[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-7:focus {
  outline: unset;
  z-index: 2;
}

.emotion-7::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-7::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-7:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-7::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-10 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02)!important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-11 {
  background-color: var(--bb-palette-background, #000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-11[hidden] {
  display: inherit!important;
  visibility: hidden!important;
}

.emotion-11:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-13 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-14.emotion-14.emotion-14 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
}

<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-owns="test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Autosuggest"
  role="combobox"
>
  <div
    class="emotion-1 emotion-4 emotion-5 emotion-6 bb-AutosuggestInput bb-InputWrapper bb-Box"
  >
    
    <input
      aria-autocomplete="list"
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-invalid="false"
      class="emotion-7 emotion-1 emotion-4 bb-Box bb-Input"
      loop=""
      placeholder="Search for a fruit..."
      role="textbox"
      type="text"
      value=""
    />
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-10 emotion-11 emotion-1 emotion-13 emotion-14 bb-AutosuggestPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
  />
</div>
`;

exports[`theming styles.base should render correctly 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-7 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-7:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-7[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-7:focus {
  outline: unset;
  z-index: 2;
}

.emotion-7::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-7::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-7:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-7::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-10 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02)!important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-11 {
  background-color: var(--bb-palette-background, #000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-11[hidden] {
  display: inherit!important;
  visibility: hidden!important;
}

.emotion-11:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-13 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-14.emotion-14.emotion-14 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
}

<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-owns="test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Autosuggest"
  role="combobox"
>
  <div
    class="emotion-1 emotion-2 emotion-5 emotion-6 bb-AutosuggestInput bb-InputWrapper bb-Box"
  >
    
    <input
      aria-autocomplete="list"
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-invalid="false"
      class="emotion-7 emotion-1 emotion-2 bb-Box bb-Input"
      loop=""
      placeholder="Search for a fruit..."
      role="textbox"
      type="text"
      value=""
    />
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-10 emotion-11 emotion-1 emotion-13 emotion-14 bb-AutosuggestPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
  />
</div>
`;

exports[`variants styles.base should render correctly 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-7 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-7[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-7:focus {
  outline: unset;
  z-index: 2;
}

.emotion-7::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-7::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-7:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-7::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-10 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02)!important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-11 {
  background-color: var(--bb-palette-background, #000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-11[hidden] {
  display: inherit!important;
  visibility: hidden!important;
}

.emotion-11:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200, #000000) 0px 0px 0px 3px;
}

.emotion-13 {
  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15),0px 0px 4px 2px rgba(0, 0, 0, 0.02);
}

.emotion-14.emotion-14.emotion-14 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
}

<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-owns="test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Autosuggest"
  role="combobox"
>
  <div
    class="emotion-1 emotion-2 emotion-5 emotion-6 bb-AutosuggestInput bb-InputWrapper bb-Box"
  >
    
    <input
      aria-autocomplete="list"
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-invalid="false"
      class="emotion-7 emotion-1 emotion-2 bb-Box bb-Input"
      loop=""
      placeholder="Search for a fruit..."
      role="textbox"
      type="text"
      value=""
    />
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-10 emotion-11 emotion-1 emotion-13 emotion-14 bb-AutosuggestPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
  />
</div>
`;
